--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="styles.defceee8a708f383ebbf.css"><!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -16,5 +16,5 @@
   <app-root></app-root>
 
 
-<script src="runtime.acf0dec4155e77772545.js" defer></script><script src="polyfills.6a03f43cfcd4d8b0bd58.js" defer></script><script src="scripts.690544d4b945a69231a5.js" defer></script><script src="main.f98c6447dc09a966c043.js" defer></script></body>
+</body>
 </html>
